Opened 9 years ago

Closed 9 years ago

Last modified 9 years ago

#6794 closed defect (fixed)

AVBSFContext Failed to send packet to filter aac_adtstoasc for stream

Reported by: Hunny Puppy Owned by:
Priority: important Component: avformat
Version: git-master Keywords: regression
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

Summary of the bug:
I'm trying to transcode a TS file to a MP4. I recently updated to a new version of FFMPEG and it's failing with some of my files.

It used to work fine with an older version of FFMPEG about a year ago but all the latest builds for a while seem to be failing.

Noticed another bug was submitted and fixed #6437, I'm wondering if it's related.

Here is the test output with the minimal command line.

How to reproduce:

C:\ffmpeg-20171030-05beee4-win64-static\bin>ffmpeg -i ADTSFail.ts -vn -acodec copy -map 0:a test.mp4

ffmpeg version N-88355-g05beee44c6 Copyright (c) 2000-2017 the FFmpeg developers
  built with gcc 7.2.0 (GCC)
  configuration: --enable-gpl --enable-version3 --enable-sdl2 --enable-bzlib --enable-fontconfig --enable-gnutls --enabl
e-iconv --enable-libass --enable-libbluray --enable-libfreetype --enable-libmp3lame --enable-libopenjpeg --enable-libopu
s --enable-libshine --enable-libsnappy --enable-libsoxr --enable-libtheora --enable-libtwolame --enable-libvpx --enable-
libwavpack --enable-libwebp --enable-libx264 --enable-libx265 --enable-libxml2 --enable-libzimg --enable-lzma --enable-z
lib --enable-gmp --enable-libvidstab --enable-libvorbis --enable-cuda --enable-cuvid --enable-d3d11va --enable-nvenc --e
nable-dxva2 --enable-avisynth --enable-libmfx
  libavutil      56.  0.100 / 56.  0.100
  libavcodec     58.  1.100 / 58.  1.100
  libavformat    58.  0.102 / 58.  0.102
  libavdevice    58.  0.100 / 58.  0.100
  libavfilter     7.  0.101 /  7.  0.101
  libswscale      5.  0.101 /  5.  0.101
  libswresample   3.  0.100 /  3.  0.100
  libpostproc    55.  0.100 / 55.  0.100
[h264 @ 000000c7986175c0] Increasing reorder buffer to 1
Input #0, mpegts, from 'ADTSFail.ts':
  Duration: 00:00:12.62, start: 1.423067, bitrate: 6645 kb/s
  Program 1
    Metadata:
      service_name    : Service01
      service_provider: FFmpeg
    Stream #0:0[0x100]: Video: h264 (High) ([27][0][0][0] / 0x001B), yuv420p(tv, bt709, top first), 1920x1080 [SAR 1:1 D
AR 16:9], 29.97 fps, 59.94 tbr, 90k tbn, 59.94 tbc
    Stream #0:1[0x101]: Audio: aac (LC) ([15][0][0][0] / 0x000F), 48000 Hz, stereo, fltp, 192 kb/s
Output #0, mp4, to 'test.mp4':
  Metadata:
    encoder         : Lavf58.0.102
    Stream #0:0: Audio: aac (LC) (mp4a / 0x6134706D), 48000 Hz, stereo, fltp, 192 kb/s
Stream mapping:
  Stream #0:1 -> #0:0 (copy)
Press [q] to stop, [?] for help
[AVBSFContext @ 000000c798726dc0] Error parsing ADTS frame header!
[AVBSFContext @ 000000c798726dc0] Failed to send packet to filter aac_adtstoasc for stream 0
av_interleaved_write_frame(): Invalid data found when processing input
size=     167kB time=00:00:07.14 bitrate= 191.9kbits/s speed= 612x
video:0kB audio:168kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: unknown
Conversion failed!

Can this please be fixed as most of my files are now failing. This appears to be retrogression.

Change History (5)

comment:1 by James, 9 years ago

Can you attach the failing sample to this ticket?

comment:2 by Hunny Puppy, 9 years ago

I tried to upload it but the minimum size required to replicate the issue is 10MB (the original file is bigger), so here is the link to download the sample

https://www.dropbox.com/s/rdlngczi4bwv9vo/ADTSFail.ts

comment:3 by Carl Eugen Hoyos, 9 years ago

Keywords: regression added
Version: unspecifiedgit-master

Regression since af9cac1b

comment:4 by James, 9 years ago

Component: undeterminedavformat
Resolution: fixed
Status: newclosed

comment:5 by Hunny Puppy, 9 years ago

Thank you, that was quick. So I should see in today's daily build?

Note: See TracTickets for help on using tickets.